// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Step (private) completed 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 8px 24px;
  min-height: 48px;
  color: #2f313a;
  color: white;
  background: #2ecc71;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.33;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    color="currentColor"
    size="1em"
  >
    <svg
      aria-hidden={true}
      className="farmblocks-icon icon"
      height={20}
      viewBox="2 2 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.721 14.453l5.49-7.066a1 1 0 011.579 1.226l-6.215 8a1 1 0 01-1.526.064l-2.785-3.03a1 1 0 011.472-1.354l1.985 2.16z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <div
    className="description"
  >
    Completed step
  </div>
</div>
`;

exports[`Storyshots Step (private) current 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 8px 24px;
  min-height: 48px;
  cursor: pointer;
  color: #2f313a;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.33;
}

.c0:hover {
  color: #3498db;
  border: solid 1px #3498db;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    color="currentColor"
    size="1em"
  >
    <svg
      aria-hidden={true}
      className="farmblocks-icon icon"
      height={20}
      viewBox="2 2 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.778 4C19.005 4 20 4.995 20 6.222v11.556A2.222 2.222 0 0117.778 20H6.222A2.222 2.222 0 014 17.778V6.222C4 4.995 4.995 4 6.222 4h11.556zm-1.445 2H7.667C6.747 6 6 6.746 6 7.667v8.666C6 17.253 6.746 18 7.667 18h8.666c.92 0 1.667-.746 1.667-1.667V7.667C18 6.747 17.254 6 16.333 6z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </span>
  <div
    className="description"
  >
    Current step
  </div>
  <span
    className="c1"
    color="currentColor"
    size="1em"
  >
    <svg
      aria-hidden={true}
      className="farmblocks-icon icon"
      height={20}
      viewBox="2 2 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Step (private) pending 1`] = `
.c1 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c1 .farmblocks-icon {
  display: block;
}

.c0 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  background: white;
  padding: 8px 24px;
  min-height: 48px;
  color: #2f313a;
  opacity: 0.24;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c0 .description {
  padding: 0 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  line-height: 1.33;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span
    className="c1"
    color="currentColor"
    size="1em"
  >
    <svg
      aria-hidden={true}
      className="farmblocks-icon icon"
      height={20}
      viewBox="2 2 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.778 4C19.005 4 20 4.995 20 6.222v11.556A2.222 2.222 0 0117.778 20H6.222A2.222 2.222 0 014 17.778V6.222C4 4.995 4.995 4 6.222 4h11.556zm-1.445 2H7.667C6.747 6 6 6.746 6 7.667v8.666C6 17.253 6.746 18 7.667 18h8.666c.92 0 1.667-.746 1.667-1.667V7.667C18 6.747 17.254 6 16.333 6z"
        fill="currentColor"
        fillRule="nonzero"
      />
    </svg>
  </span>
  <div
    className="description"
  >
    Pending step
  </div>
  <span
    className="c1"
    color="currentColor"
    size="1em"
  >
    <svg
      aria-hidden={true}
      className="farmblocks-icon icon"
      height={20}
      viewBox="2 2 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
</div>
`;
